# naadsm

./: .gitignore  .gitmodules
lib/sim/: AUTHORS  Doxyfile  INSTALL  INSTALL.html  Makefile.am  bootstrap  configure.ac  configure.in  doxygen.css  expand_parameters.py  graph.py  naadsm.1
lib/sim/cppoutputs/: cherdlist.cpp  cherdlist.h  cprodtype.cpp  cprodtype.h  csmdatabase.cpp  csmdatabase.h  csmptoutput.cpp  csmptoutput.h  csmsimulation.cpp  csmsimulation.h  czone.cpp  czone.h  deleteScript.sql  naadsm-3_3_2-postgres-outputsOnly.sql  naadsm_3_3_2-postgres.vsd  naadsmlibrary.cpp  naadsmlibrary.h
lib/sim/dll/: Makefile.win  config.h  libsssim.def  naadsm_private.rc  sssim.dev  sssim.layout  sssim_private.h  sssim_private.rc  sssim_private.res
lib/sim/dll/QtCreatorProject/: Makefile  Makefile.Debug  Makefile.Release  naadsm.pro  naadsm4.pro  object_script.naadsm.Debug  object_script.naadsm.Release
lib/sim/doc/diagrams/: 6herds_2_w_des_ring.gnuplot  7herds_w_ring.gnuplot  8herds_none_infected_2prodtypes_1.gnuplot  8herds_none_infected_2prodtypes_2.gnuplot  Makefile.am  air_prevalence_incr.gnuplot  airborne.dia  back_linking.dia  building_blocks.dia  contact_problem.dia  contact_proof.dia  directions.dia  disease_neg_days.gnuplot  events.dia  events_flowchart.dia  extend_array_1.dia  extend_array_2.dia  herd2gnuplot.py  latitude_and_area.dia  no_back_linking.dia  prevalence_2curves_4days.gnuplot  shipment_size_transfer_prob.gnuplot  state-transition.dia  tiles_ignore_outsiders.dia
lib/sim/event/: Makefile.am  event.c  event.h
lib/sim/filters/: Makefile.am  apparent_events_table.y  exposures_table.y  extract_columns.py  full_table.y  progress_meter.c  scanner.l  shp2png.c  shp2png2.c  state_table.y  summary_gis.y  table.y  weekly_gis.y  weekly_gis_zones.y  xml2shp.c
lib/sim/general/: general.c
lib/sim/gis/: Makefile.am  gis.c  gis.h
lib/sim/gis/test/: Makefile.am  scanner.l  shell.y
lib/sim/gis/test/config/: unix.exp
lib/sim/gis/test/libgis.all/: local_flat_earth_distance.exp  local_flat_earth_heading.exp  local_flat_earth_polygon_area.exp  square_grid_distance.exp  square_grid_heading.exp  square_grid_polygon_area.exp
lib/sim/herd/: 2dch.c  2dch.h  Makefile.am  herd-randomizer.c  herd-randomizer.h  herd.c  herd.h  scorecard.c  scorecard.h
lib/sim/herd/test/: Makefile.am  scanner.l  shell.y
lib/sim/models/: Makefile.am  airborne-spread-exponential-model.c  airborne-spread-exponential-model.h  airborne-spread-model.c  airborne-spread-model.h  apparent-events-table-writer.c  basic-dcd-model.c  basic-dcd-model.h  basic-destruction-model.c  basic-destruction-model.h  basic-zone-focus-model.c  basic-zone-focus-model.h  conflict-resolver.c  conflict-resolver.h  contact-recorder-model.c  contact-spread-model.c  contact-spread-model.h  destruction-list-monitor.c  destruction-list-monitor.h  destruction-monitor.c  destruction-monitor.h  detection-model.c  detection-model.h  detection-monitor.c  detection-monitor.h  detection-on-given-day-model.c  detection-on-given-day-model.h  disease-model.c  disease-model.h  economic-model.c  economic-model.h  exam-monitor.c  exposure-monitor.c  exposure-monitor.h  exposures-table-writer.c  exposures-table-writer.h  full-table-writer.c  infection-monitor.c  infection-monitor.h  local-area-spread-model.c  (+44 more)
lib/sim/models/test/: 2herds_1_start_dead.xml  2herds_1_start_destroyed.xml  2herds_1_start_vimmune.xml  2targets_same_dist_same_size.xml  3herds_2_at_same_loc.xml  3herds_pigs_cattle_sheep_pigs_sheep_infected.xml  3targets_same_dist_same_size.xml  4herds_4prodtypes.xml  4herds_line.xml  7herds.xml  8herds_all_infected.xml  8herds_none_infected.xml  8herds_none_infected_2prodtypes_1.xml  8herds_none_infected_2prodtypes_2.xml  Makefile.am  shell.c  shell2.c  xml2dox.py  xml2expect.py
lib/sim/models/test/config/: unix.exp
lib/sim/models/test/model.airborne-spread/: 2prod_types_to_both.xml  2prod_types_to_cattle.xml  2prod_types_to_neither.xml  2prod_types_to_pigs.xml  2sources_1target_1.xml  2sources_1target_1_w_vars.xml  2sources_1target_2.xml  2sources_1target_2_w_vars.xml  2sources_1target_3.xml  2sources_1target_3_w_vars.xml  Makefile.am  all.xml  direction_0.xml  direction_all.xml  direction_e.xml  direction_n.xml  direction_n_w_vars.xml  direction_s.xml  direction_w.xml  distance_0.xml  distance_1.xml  distance_2.xml  distance_3.xml  distance_4.xml  distance_5.xml  div_zero.xml  no_quarantine.xml  no_quarantine_w_vars.xml  no_spread_1.xml  no_spread_1_exp.xml  no_spread_2.xml  no_spread_3.xml  no_spread_4.xml  prev_default.xml  prev_incr.xml  quarantine_fast.xml  quarantine_slow.xml  spread_1.xml  spread_1_exp.xml  spread_2.xml  (+8 more)
lib/sim/models/test/model.control-measures/: all.xml  (+127 more)
lib/sim/prob_dist/: Makefile.am  prob_dist.c  prob_dist.h
lib/sim/prob_dist/test/: Makefile.am  scanner.l  shell.y
lib/sim/rel_chart/: Makefile.am  rel_chart.c
lib/sim/rel_chart/test/: Makefile.am  scanner.l  shell.y
lib/sim/replace/: Makefile.am  g_strsplit_regexp.c  g_strsplit_regexp.h  getline.c  getstr.c  getstr.h  memchr.c  replace.c  strnlen.c
lib/sim/reporting/: Makefile.am  reporting.c  reporting.h
lib/sim/reporting/test/: Makefile.am  scanner.l  shell.y
lib/sim/rng/: Makefile.am  rng.c  rng.h
lib/sim/sc_guilib/: sc_guilib_outputs.c  sc_guilib_outputs.h
lib/sim/sm3herds2xml/: Makefile.am  main.c  parser.y
lib/sim/smherds2xml/: Makefile.am  main.c  parser.y
lib/sim/spatial_search/: ch2d.c  spatial_search.c
lib/sim/src/: Makefile.am  cli.c  event_manager.c  event_manager.h  guilib.c  guilib.h  herd_zone_updater.c  herd_zone_updater.h  main.c  main.h  model.h  model_loader.c  model_loader.h  mpix.c  naadsm.c  naadsm.h  parameter.c  parameter.h
lib/sim/wml/: Makefile.am  WmlBox2.c  WmlContMinBox2.c  WmlContPointInPolygon2.c  WmlConvexHull2.c  WmlVector2.c  wml.c  wml.h
lib/sim/wml/test/: Makefile.am  scanner.l  shell.y
lib/sim/wml/wml/: WmlBox2.h  WmlContMinBox2.h  WmlContPointInPolygon2.h  WmlConvexHull2.h  WmlVector2.h
lib/sim/xml2sm3herds/: Makefile.am  main.c
lib/sim/zone/: Makefile.am  zone.c  zone.h
(+875 files in other folders)
