## Makefile.am -- Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = dejagnu

RUNTESTDEFAULTFLAGS = --srcdir $$srcdir/test

SUBDIRS = libltdl \
  replace \
  rng \
  wml \
  rel_chart \
  gis \
  herd \
  event \
  prob_dist \
  reporting \
  zone \
  src \
  models \
  smherds2xml \
  sm3herds2xml \
  xml2sm3herds \
  filters \
  doc

EXTRA_DIST = Doxyfile

